# test

./: CMakeLists.txt  build.sh  square.f03  test.c
